--- a/waitingOrder/pages/order/order.wxml
+++ b/waitingOrder/pages/order/order.wxml
@@ -1,4 +1,5 @@
-<view>
-  <order-form orderList="{{orderList}}">
-  </order-form>
-</view>
+<!-- 组件模板 -->
+<order-form submit="{{submit}}" list="{{list}}">
+  <button>aaaa</button>
+  <button>bbbb</button>
+</order-form>
