--- a/components/form/form.wxss
+++ b/components/form/form.wxss
@@ -1,5 +1,10 @@
+.form-title {
+  background-color: #e4e4e4;
+  font-size: 24rpx;
+  line-height: 60rpx;
+}
 .form-cell {
-  line-height: 100rpx;
+  line-height: 80rpx;
   padding: 0 20rpx;
   font-size: 32rpx;
 }
@@ -20,11 +25,14 @@
   vertical-align: middle;
 }
 .picker{
-    padding: 10rpx;
+    /* padding: 10rpx; */
     background-color: #FFFFFF;
 }
 .form-textarea {
   width: 100%;
   height: 200rpx;
   padding: 10rpx 0;
+}
+.form-placeholder {
+  color: #eee;
 }
