--- a/mine/pages/index/index.wxml
+++ b/mine/pages/index/index.wxml
@@ -1,1 +1,33 @@
-asdadfaf
+<view>
+  <!-- 头像 -->
+  <view class="weui-cells weui-cells_after-title">
+    <view class="weui-cell weui-cell_access">
+      <view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
+        <image src="/images/+.png" style="width: 50px; height: 50px; display: block" />
+        <!-- <view class="weui-badge" style="position: absolute;top: -.4em;right: -.4em;">8</view> -->
+      </view>
+      <view class="weui-cell__bd">
+        <view>联系人名称</view>
+        <view style="font-size: 13px;color: #888888;">摘要信息</view>
+        <view style="font-size: 13px;color: #888888;">摘要信息</view>
+      </view>
+      <view class="weui-cell__ft weui-cell__ft_in-access" style="font-size: 0">
+        <!-- <view style="display: inline-block;vertical-align:middle; font-size: 17px;">详细信息</view>
+        <view class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view> -->
+      </view>
+    </view>
+  </view>
+  <!-- 列表 -->
+  <view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_access">
+        <view class="weui-cell__bd">单行列表</view>
+        <view class="weui-cell__ft weui-cell__ft_in-access" style="font-size: 0">
+          <view style="display: inline-block;vertical-align:middle; font-size: 17px;">详细信息</view>
+          <view class="weui-badge weui-badge_dot" style="margin-left: 5px;margin-right: 5px;"></view>
+        </view>
+      </view>
+    </view>
+  </view>
+  <!-- 退出登录按钮 -->
+</view>
