--- a/style/common.wxss
+++ b/style/common.wxss
@@ -9,3 +9,42 @@
 .weui-cell{
     padding: 12px 15px 12px 35px;
 }
+/* 表达和详单的样式 */
+.form-title {
+  background-color: #e4e4e4;
+  font-size: 24rpx;
+  line-height: 60rpx;
+}
+.form-cell {
+  line-height: 80rpx;
+  padding: 0 20rpx;
+  font-size: 32rpx;
+}
+.form-cell::after {
+  display: block;
+  content: "";
+  border-bottom: 1px solid #eee;
+}
+.form-ld {
+  display: inline-block;
+  width: 30%;
+  text-align: center;
+  vertical-align: middle;
+}
+.form-rd {
+  display: inline-block;
+  width: 70%;
+  vertical-align: middle;
+}
+.picker{
+    /* padding: 10rpx; */
+    background-color: #FFFFFF;
+}
+.form-textarea {
+  width: 100%;
+  height: 200rpx;
+  padding: 10rpx 0;
+}
+.form-placeholder {
+  color: #eee;
+}
