--- a/waitingOrder/pages/detailed/detailed.wxml
+++ b/waitingOrder/pages/detailed/detailed.wxml
@@ -1,3 +1,5 @@
 <view>
-  <detailed-list detailed="{{detailed}}"></detailed-list>
+  <detailed-list detailed="{{detailed}}" labelName="{{labelName}}">
+    <button>按钮啊</button>
+  </detailed-list>
 </view>
