--- a/app.wxss
+++ b/app.wxss
@@ -1,12 +1,7 @@
 /**app.wxss**/
-.container {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+page {
+  background-color:#F4F4F4;
+  font-size: 24rpx;
+}
 @import 'style/weui.wxss';
 @import 'style/common.wxss';
